fix main with modo indexar, add modo facetas_h, adjust createBothIndices